# jay-mobile-app

./: .gitignore  JAY_Chat_Design.html  JAY_Phase3_Routine.md  JAY_Routine_Architecture.md  JAY_Routine_Frontend_Prompt.md  JAY_Ultimate_Routine.html  JAY_Ultimate_Routine_Architecture.md  The_Complete_Encyclopedia_of_Skincare_Routines.docx  facial_scan_dermatologist_documentation.docx  package-lock.json  product_database.csv  zrough.txt
docs/: Quiz.md  (+5 more)
jay-backend/: .env.example  .gitignore  clear_content.py  pyproject.toml  start.bat  stop.bat
jay-backend/alembic/: env.py
jay-backend/app/: auth.py  config.py  database.py  main.py
jay-backend/app/ai/: context.py
jay-backend/app/ai/prompts/: chat_system.py
jay-backend/app/ai/providers/: gemini.py  groq.py
jay-backend/app/features/chat/: models.py  router.py  schemas.py  service.py
jay-backend/app/features/content/: batch_job.py  models.py  pipeline.py  prompts.py  router.py  schemas.py  seed_data.py  service.py
jay-backend/app/features/products/: enrichment.py  models.py  router.py  schemas.py  service.py
jay-backend/app/features/profile/: insights.py  models.py  questionnaire.py  router.py  schemas.py  service.py
jay-backend/app/features/research/: models.py  pdf_export.py  pipeline.py  router.py  schemas.py  tavily_client.py
jay-backend/app/features/routine/: constants.py  generator.py  jay_assist.py  models.py  prompts.py  router.py  schemas.py  service.py  validator.py
jay-backend/app/shared/: exceptions.py
jay-backend/scripts/: classify_products.py  enrich_all_products.py  seed_products.py
(+209 files in other folders)
